--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,6 @@ services:
 
   wordpress:
     build: .
-    volumes:
-      - wordpress_data:/var/www/html
     ports:
       - "8000:80"
     depends_on:
@@ -29,7 +27,10 @@ services:
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_VERSION: 5.9
+      PLUGIN_DIR: /var/www/html/wp-content/plugins/accredible-learndash-add-on
     volumes:
+      - wordpress_data:/var/www/html
       # Install Accredible plugin by default
       - ".:/var/www/html/wp-content/plugins/accredible-learndash-add-on"
 
