--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -31,6 +31,7 @@
 	<rule ref="WordPress">
 		<exclude name="WordPress.DB.DirectDatabaseQuery.DirectQuery"/>
 		<exclude name="WordPress.DB.DirectDatabaseQuery.NoCaching"/>
+		<exclude name="WordPress.DB.PreparedSQLPlaceholders.UnquotedComplexPlaceholder"/>
 	</rule>
 	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
 		<properties>
