--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -57,4 +57,7 @@
 	<rule ref="WordPress.WP.AlternativeFunctions.file_get_contents_file_get_contents">
 		<exclude-pattern>*/tests/*</exclude-pattern>
 	</rule>
+	<rule ref="WordPress.PHP.DiscouragedPHPFunctions.runtime_configuration_putenv">
+		<exclude-pattern>*/tests/*</exclude-pattern>
+	</rule>
 </ruleset>
