--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       WORDPRESS_DB_NAME: wordpress
       WORDPRESS_VERSION: 5.9
       PLUGIN_DIR: /var/www/html/wp-content/plugins/accredible-learndash-add-on
+      ACCREDIBLE_LEARNDASH_API_ENDPOINT:
     volumes:
       - wordpress_data:/var/www/html
       # Install Accredible plugin by default
