--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup
         run: |
           docker ps
-          docker exec accredible-learndash-add-on_db_1 mysql -u root -p <<< grant ALL PRIVILEGES ON *.* TO 'wordpress';
+          docker exec -it accredible-learndash-add-on_db_1 mysql -u"root" -p"${{ secrets.DB_PASSWORD }}" -e "grant ALL PRIVILEGES ON *.* TO 'wordpress';"
           docker exec -w /var/www/html/wp-content/plugins/accredible-learndash-add-on accredible-learndash-add-on_wordpress_1 bash bin/init-wp-dev.sh
           docker exec -w /var/www/html/wp-content/plugins/accredible-learndash-add-on accredible-learndash-add-on_wordpress_1 composer install
 
