--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,14 @@ jobs:
 
       - name: Initialise WP
         run: |
-          bash ./bin/init-wp-dev.sh
+          echo ".composer/vendor/bin" >> $GITHUB_PATH
+          bash bin/install-wp-tests.sh wordpress wordpress wordpress mariadb 5.9
+          composer global require "phpunit/phpunit=4.8.*|5.7.*"
+          composer global require wp-coding-standards/wpcs
+          composer global require phpcompatibility/php-compatibility
+          composer global require phpcompatibility/phpcompatibility-paragonie
+          composer global require phpcompatibility/phpcompatibility-wp
 
-      # echo ".composer/vendor/bin" >> $GITHUB_PATH
-      # bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-      # composer global require "phpunit/phpunit=4.8.*|5.7.*"
+      - name: Unit Tests
+        run: phpunit
 
