Access mysql via 127.0.0.1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Initialise WP
         run: |
           echo ".composer/vendor/bin" >> $GITHUB_PATH
-          bash bin/install-wp-tests.sh wordpress wordpress wordpress localhost 5.9
+          bash bin/install-wp-tests.sh wordpress wordpress wordpress 127.0.0.1:${{ job.services.mysql.ports['3306'] }} 5.9
           composer global require "phpunit/phpunit=4.8.*|5.7.*"
           composer global require wp-coding-standards/wpcs
           composer global require phpcompatibility/php-compatibility
