--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           MYSQL_PASSWORD: wordpress
           MYSQL_TCP_PORT: 3303
         ports:
-          - 3303:3306
+          - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 3
 
     strategy:
@@ -37,17 +37,20 @@ jobs:
           ini-values: max_input_vars=5000
           coverage: none
 
+      - name: Install dependencies
+        uses: php-actions/composer@v6
+
       - name: Initialise WP
         run: |
           sleep 10
           echo ".composer/vendor/bin" >> $GITHUB_PATH
-          bash bin/install-wp-tests.sh wordpress wordpress wordpress 127.0.0.1:${{ job.services.mysql.ports['3303'] }} 5.9
+          bash bin/install-wp-tests.sh wordpress wordpress wordpress 127.0.0.1:${{ job.services.mysql.ports['3306'] }} 5.7
           composer global require "phpunit/phpunit=4.8.*|5.7.*"
           composer global require wp-coding-standards/wpcs
           composer global require phpcompatibility/php-compatibility
           composer global require phpcompatibility/phpcompatibility-paragonie
           composer global require phpcompatibility/phpcompatibility-wp
 
-      - name: Unit Tests
-        run: phpunit
+      - name: PHPUnit tests
+        uses: php-actions/phpunit@v3
 
