--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
           coverage: none
 
       - name: Initialise WP
+        env:
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}
         run: |
           sleep 10
           echo ".composer/vendor/bin" >> $GITHUB_PATH
@@ -49,5 +51,7 @@ jobs:
           composer global require phpcompatibility/phpcompatibility-wp
 
       - name: PHPUnit tests
+        env:
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}
         uses: php-actions/phpunit@v3
 
