--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,8 @@
-name: "PHP Unit Tests"
+## Linting and Unit Tests using phpcs and phpunit
+
+name: "Linting and Unit Tests"
 
 on:
-  push:
   workflow_dispatch:
   pull_request:
     branches: ['develop', 'master']
@@ -32,6 +33,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
+      - name: Setup PHP ${{ matrix.php }}
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          ini-values: upload_max_filesize=512M
+
       - name: Build Composer
         uses: php-actions/composer@v6
         with:
@@ -51,10 +58,10 @@ jobs:
 
       - name: Run PHP CodeSniffer
         run: |
+          php --version
           vendor/bin/phpcs --version
           vendor/bin/phpcs -i
           vendor/bin/phpcs -v
 
       - name: Run PHP Unit Tests
         run: vendor/bin/phpunit
-
