--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ name: "Linting and Unit Tests"
 
 on:
   workflow_dispatch:
+  push:
+    branches: ['develop,' 'master']
   pull_request:
     branches: ['develop', 'master']
 
