--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,9 @@ name: "Linting and Unit Tests"
 on:
   workflow_dispatch:
   push:
-    branches: ['develop,' 'master']
+    branches:
+      - develop
+      - master
   pull_request:
     branches: ['develop', 'master']
 
