--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,8 +64,9 @@ jobs:
         run: |
           php --version
           vendor/bin/phpcs --version
-          vendor/bin/phpcs -i
           vendor/bin/phpcs -v
 
       - name: Run PHP Unit Tests
-        run: vendor/bin/phpunit
+        run: |
+          vendor/bin/phpunit --version
+          vendor/bin/phpunit
