--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.3', '7.4']
+        php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4']
         wordpress: ['5.9']
 
     name: WP version ${{ matrix.wordpress }} on PHP ${{ matrix.php }}
