--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,20 +44,21 @@ jobs:
           php-version: ${{ matrix.php }}
           ini-values: upload_max_filesize=512M
 
-      - name: Build Composer Version 1
-        if: ${{ matrix.php <= 7.1 }}
-        uses: php-actions/composer@v6
-        with:
-          php_version: ${{ matrix.php }}
-          version: 1
-          command: update
+      - name: Select Composer Version
+        run: |
+          if (( ${{ matrix.php }} <= 7.1 ))
+          then
+            echo "COMPOSER_VERSION=1" >> $GITHUB_ENV
+          else
+            echo "COMPOSER_VERSION=2" >> $GITHUB_ENV
+          fi
 
-      - name: Build Composer Version 2
-        if: ${{ matrix.php >= 7.2 }}
+      - name: Build Composer Version ${{ env.COMPOSER_VERSION }}
+        if:
         uses: php-actions/composer@v6
         with:
           php_version: ${{ matrix.php }}
-          version: 2
+          version: COMPOSER_VERSION
           command: update
 
       - name: Initialise WP
