--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -60,4 +60,7 @@
 	<rule ref="WordPress.PHP.DiscouragedPHPFunctions.runtime_configuration_putenv">
 		<exclude-pattern>*/tests/*</exclude-pattern>
 	</rule>
+	<rule ref="Squiz.Commenting.FileComment.WrongStyle">
+		<exclude-pattern>index.php</exclude-pattern>
+	</rule>
 </ruleset>
