--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
         "yoast/phpunit-polyfills": "^1.0",
         "squizlabs/php_codesniffer": "^3.3.1",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-        "phpcompatibility/phpcompatibility-wp": "*"
+        "phpcompatibility/phpcompatibility-wp": "*",
+        "phpcsstandards/phpcsutils": "^1.0",
+        "phpcsstandards/phpcsextra": "^1.2.0"
     },
     "config": {
         "allow-plugins": {
