DGR-964: Bump Tested up to version to 6.6 (#73)
* Bump Tested up to version to 6.6

* Fix phpcs setup issues

* Fix WP initialization failure in CI

* Fix auto coding style correction by phpcbf

* Fix Universal.NamingConventions.NoReservedKeywordParameterNames.defaultFound warning

* Fix Capabilities should be used instead of roles. Found administrator in function call phpcs errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,22 +32,16 @@ jobs:
         include:
           - php: '5.6'
             composer: 1
-            wordpress: '5.9'
-          - php: '7.0'
-            composer: 1
-            wordpress: '5.9'
+            wordpress: '6.2'
           - php: '7.1'
             composer: 1
-            wordpress: '5.9'
-          - php: '7.2'
-            composer: 2
-            wordpress: '5.9'
-          - php: '7.3'
-            composer: 2
-            wordpress: '5.9'
+            wordpress: '6.5'
           - php: '7.4'
             composer: 2
-            wordpress: '5.9'
+            wordpress: '6.6'
+          - php: '8.2'
+            composer: 2
+            wordpress: '6.6'
 
     name: WP version ${{ matrix.wordpress }} on PHP ${{ matrix.php }}
 
@@ -72,11 +66,14 @@ jobs:
         env:
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
         run: |
-          git clone -b master https://github.com/WordPress/WordPress-Coding-Standards.git vendor/wp-coding-standards/wpcs
+          git clone -b main https://github.com/WordPress/WordPress-Coding-Standards.git vendor/wp-coding-standards/wpcs
+          composer global config --no-plugins allow-plugins.dealerdirect/phpcodesniffer-composer-installer true
           composer global require wp-coding-standards/wpcs
           composer global require phpcompatibility/phpcompatibility-paragonie
           composer global require phpcompatibility/phpcompatibility-wp
-          sudo vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility,vendor/phpcompatibility/phpcompatibility-paragonie,vendor/phpcompatibility/phpcompatibility-wp
+          composer global require phpcsstandards/phpcsutils
+          composer global require phpcsstandards/phpcsextra
+          sudo vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility,vendor/phpcompatibility/phpcompatibility-paragonie,vendor/phpcompatibility/phpcompatibility-wp,vendor/phpcsstandards/phpcsutils,vendor/phpcsstandards/phpcsextra
           vendor/bin/phpcs -i
           bash bin/install-wp-tests.sh wordpress wordpress wordpress 127.0.0.1:${{ job.services.mysql.ports[3306] }} ${{ matrix.wordpress }} true
 
