--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require-dev": {
+        "phpunit/phpunit": "^9.6.33",
         "yoast/phpunit-polyfills": "^1.0",
         "squizlabs/php_codesniffer": "^3.3.1",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
